--- a/source/layouts/article_layout.erb
+++ b/source/layouts/article_layout.erb
@@ -1,11 +1,15 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
+  <meta charset="utf-8"/>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1'/>
   <% title = yield_content :title %>
   <title><%= title.present? ? title : current_page.data.title %> - Sahara</title>
   <%= stylesheet_link_tag "all" %>
+  <!--[if lt IE 9]>
+  <%= stylesheet_link_tag "ie" %>
+  <![endif]-->
+  <%= javascript_include_tag "html5" %>
 </head>
 <body>
 <header><h1><%= link_to "Je m'appelle Sahara", "/" %></h1></header>
@@ -17,10 +21,11 @@
         <%= current_page.data.title %>
       </h2>
       <%= yield %>
-      <div class="readmore"><%= link_to "<< 返回首页", "/" %></div>
+      <div class="back"><%= link_to "<< 返回首页", "/" %></div>
     </article>
   </div>
   <%= partial 'sidebar' %>
 </div>
+<footer></footer>
 </body>
 </html>
