--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -62,6 +62,7 @@ h3 {
 .container {
   width: 960px;
   margin: 0 auto;
+  @include clearfix;
 }
 
 #main {
@@ -72,6 +73,7 @@ h3 {
     margin: 30px 30px 0 0;
     @include box-shadow(0 0 15px #DDD);
     font-size: 14px;
+    line-height: 160%;
 
     img {
       border: 1px solid #DDD;
@@ -109,4 +111,9 @@ aside {
     list-style: none;
     padding-left: 20px;
   }
+}
+
+footer {
+  margin-top: 30px;
+  margin-bottom: 60px;
 }
