--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -4,7 +4,7 @@ per_page: 12
 ---
 <% content_for :title, "Tagged as #{tagname}" %>
 
-<h1>Articles tagged '<%= tagname %>'</h1>
+<h1>标签为 <%= tagname %> 的博客</h1>
 
 <% if paginate %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
@@ -16,7 +16,7 @@ per_page: 12
 
 <ul>
   <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e, %Y') %></span></li>
+    <li><%= link_to article.title, article %> <span><%= date_display article.date %></span></li>
   <% end %>
 </ul>
 
