--- a/source/sidebar.erb
+++ b/source/sidebar.erb
@@ -12,14 +12,14 @@
   <h3>标签</h3>
   <ul class="tags">
     <% blog.tags.each do |tag, articles| %>
-        <li><%= tag_link tag, articles.size %></li>
+        <li><%= labeled_link tag, articles.size, tag_path(tag) %></li>
     <% end %>
   </ul>
 
   <h3>历史</h3>
-  <ul>
+  <ul class="tags">
     <% blog.articles.group_by {|a| a.date.year }.each do |year, articles| %>
-        <li><a href="<%= blog_year_path year %>"><%= year %> (<%= articles.size %>)</a></li>
+        <li><%= labeled_link "#{year}年", articles.size, blog_year_path(year) %></li>
     <% end %>
   </ul>
 </aside>
