--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,3 +1,5 @@
+@import "font-awesome";
+
 @mixin box-shadow($shadow) {
   -webkit-box-shadow: $shadow;
   -moz-box-shadow: $shadow;
@@ -43,6 +45,7 @@ header {
     display: block;
     width: 960px;
   }
+
 }
 
 .timestamp {
@@ -158,4 +161,9 @@ footer {
       }
     }
   }
+}
+
+.pull-right {
+  float: right;
+  text-shadow: none;
 }
