--- a/source/layout.erb
+++ b/source/layout.erb
@@ -17,7 +17,7 @@
       <div id="main" role="main">
         <%= yield %>
       </div>
-      <%= partial 'sidebar' %>
+      <%= partial '_sidebar' %>
     </div>
     <footer></footer>
     <script type="text/javascript">
