--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -133,22 +133,22 @@ footer {
     @include box-shadow(0 0 4px #999);
     margin-right: 5px;
     margin-bottom: 8px;
-    
+
     a {
       display: block;
       height: 100%;
-  
+
       .tag {
         padding: 0 10px;
       }
-      
+
       .number {
         background-color: $mainColor;
         color: white;
         display: inline-block;
         padding: 0 4px;
         position: relative;
-        
+
         .convex {
           position: absolute;
           left: -3px;
@@ -166,4 +166,55 @@ footer {
 .pull-right {
   float: right;
   text-shadow: none;
+}
+
+.highlight {
+  pre {
+    font-family: menlo;
+
+    .k, .nt, .nc, .nd {
+      color: #000080;
+      font-weight: bold;
+    }
+
+    .nf {
+      color: #0000FF;
+      font-style: italic;
+    }
+
+    .na {
+      color: #0000FF;
+      font-weight: bold;
+    }
+
+    .n {
+      color: #C37522;
+      font-style: italic;
+    }
+
+    .o, .no {
+      color: #000;
+      font-weight: bold;
+    }
+
+    .sh {
+      color: #297BDE;
+      font-weight: bold;
+    }
+
+    .ss {
+      color: #660099;
+      font-weight: bold;
+    }
+
+    .s2, .kt, .sx {
+      color: #008000;
+      font-weight: bold;
+    }
+
+    .mi, .mf {
+      color: #0000FF;
+    }
+
+  }
 }
