--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,28 +4,32 @@ per_page: 10
 ---
 
 <% content_for :title, "Welcome" %>
+<div id="main" role="main">
+  <% if paginate %>
+      <p>Page <%= page_number %> of <%= num_pages %></p>
 
-<% if paginate %>
-  <p>Page <%= page_number %> of <%= num_pages %></p>
-
-  <% if prev_page %>
-    <p><%= link_to 'Previous page', prev_page %></p>
+      <% if prev_page %>
+          <p><%= link_to 'Previous page', prev_page %></p>
+      <% end %>
   <% end %>
-<% end %>
 
-<% page_articles.each_with_index do |article, i| %>
-  <article class="clearfix">
-    <h2>
-      <div class="timestamp"><%= date_display article.date %></div>
-      <%= link_to article.title, article %>
-    </h2>
-    <p><%= article.summary %></p>
-    <div class="readmore"><%= link_to "深入阅读 >>", article %></div>
-  </article>
-<% end %>
+  <% page_articles.each_with_index do |article, i| %>
+      <article class="clearfix">
+        <h2>
+          <div class="timestamp"><%= date_display article.date %></div>
+          <%= link_to article.title, article %>
+        </h2>
+        <p><%= article.summary %></p>
 
-<% if paginate %>
-  <% if next_page %>
-    <p><%= link_to 'Next page', next_page %></p>
+        <div class="readmore"><%= link_to "深入阅读 >>", article %></div>
+      </article>
   <% end %>
-<% end %>
+
+  <% if paginate %>
+      <% if next_page %>
+          <p><%= link_to 'Next page', next_page %></p>
+      <% end %>
+  <% end %>
+</div>
+
+<%= partial 'sidebar' %>
