--- a/source/layout.erb
+++ b/source/layout.erb
@@ -1,37 +1,31 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <% title = yield_content :title %>
-    <title><%= title.present? ? title : current_page.data.title %> - Sahara</title>
-    <%= stylesheet_link_tag "all" %>
-    <!--[if lt IE 9]>
-    <%= stylesheet_link_tag "ie" %>
-    <![endif]-->
-    <%= javascript_include_tag "html5" %>
-  </head>
-  <body>
-    <header><h1><%= link_to "Je m'appelle Sahara", "/" %></h1></header>
-    <div class="container">
-      <div id="main" role="main">
-        <%= yield %>
-      </div>
-      <%= partial '_sidebar' %>
-    </div>
-    <footer></footer>
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-36981452-2']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-
-    </script>
-  </body>
+<head>
+  <meta charset="utf-8"/>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1'/>
+  <% title = yield_content :title %>
+  <title><%= title.present? ? title : current_page.data.title %> - Sahara</title>
+  <%= stylesheet_link_tag "all" %>
+  <!--[if lt IE 9]>
+  <%= stylesheet_link_tag "ie" %>
+  <![endif]-->
+  <%= javascript_include_tag "html5" %>
+</head>
+<body>
+<header>
+  <h1>
+    <%= link_to "Je m'appelle Sahara", "/" %>
+    <% unless current_page.url == "/" %>
+        <nav class="pull-right">
+          <%= link_to '<i class="icon-home"></i>', "/", title: "首页" %>
+        </nav>
+    <% end %>
+  </h1>
+</header>
+<div class="container">
+  <%= yield %>
+</div>
+<footer></footer>
+<%= partial "ga" %>
+</body>
 </html>
