--- a/source/layouts/article_layout.erb
+++ b/source/layouts/article_layout.erb
@@ -1,70 +1,18 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8"/>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1'/>
-  <% title = yield_content :title %>
-  <title><%= title.present? ? title : current_page.data.title %> - Sahara</title>
-  <%= stylesheet_link_tag "all" %>
-  <!--[if lt IE 9]>
-  <%= stylesheet_link_tag "ie" %>
-  <![endif]-->
-  <%= javascript_include_tag "html5" %>
-</head>
-<body>
-<header>
-  <h1>
-    <%= link_to "Je m'appelle Sahara", "/" %>
-    <nav class="pull-right">
-      <%= link_to '<i class="icon-home"></i>', "/", title: "首页" %>
-    </nav>
-  </h1>
-</header>
-<div class="container">
-  <div id="main" role="main">
+<% wrap_layout :layout do %>
     <article class="clearfix">
       <h2>
         <div class="timestamp"><%= date_display current_article.date %></div>
         <%= current_article.title %>
       </h2>
+
+      <ul class="tags">
+        <% current_article.tags.each do |tag| %>
+            <li><%= labeled_link tag, blog.tags[tag].size, tag_path(tag) %></li>
+        <% end %>
+      </ul>
+
       <%= yield %>
+
+      <%= partial "disqus" %>
     </article>
-  </div>
-  <aside>
-    <ul class="tags">
-      <% current_article.tags.each do |tag| %>
-        <li><%= labeled_link tag, blog.tags[tag].size, tag_path(tag) %></li>
-      <% end %>
-    </ul>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'saharaying'; // required: replace example with your forum shortname
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-  </aside>
-</div>
-<footer></footer>
-<script type="text/javascript">
-
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-36981452-2']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-</script>
-</body>
-</html>
+<% end %>
