--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -71,31 +71,33 @@ h3 {
 }
 
 #main {
-  width: 640px;
+  width: 610px;
+  padding-right: 30px;
   float: left;
-  article {
-    padding: 30px;
-    margin: 30px 30px 0 0;
-    @include box-shadow(0 0 15px #DDD);
-    font-size: 14px;
-    line-height: 160%;
-
-    img {
-      border: 1px solid #DDD;
-      padding: 5px;
-    }
-
-    pre {
-      border: 1px solid #DDD;
-      border-left-width: 15px;
-      background-color: #FBFBFB;
-      padding: 5px;
-      overflow: scroll;
-    }
-  }
 
   .readmore {
     float: right;
+  }
+}
+
+article {
+  padding: 30px;
+  margin-top: 30px;
+  @include box-shadow(0 0 15px #DDD);
+  font-size: 14px;
+  line-height: 160%;
+
+  img {
+    border: 1px solid #DDD;
+    padding: 5px;
+  }
+
+  pre {
+    border: 1px solid #DDD;
+    border-left-width: 15px;
+    background-color: #FBFBFB;
+    padding: 5px;
+    overflow: scroll;
   }
 }
 
