--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -1,30 +1,32 @@
 ---
-pageable: true
+pageable: false
 ---
+
+
+<div id="timeline" class="clearfix">
+  <ul id="dates">
+    <% (1..12).to_a.reverse.each do |month| %>
+    <li><a href="#month_<%= month %>"><%= calendar_by_type 'month', year, month %></a></li>
+    <% end %>
+  </ul>
+  <ul id="issues">
+    <% (1..12).to_a.reverse.each do |month| %>
+        <li id="month_<%= month %>">
+          <div class="article-list">
+            <% page_articles.select{|article| article.date.month == month}.each do |article| %>
+                <p><%= link_to article.title, article %></p>
+            <% end %>
+          </div>
+        </li>
+    <% end %>
+  </ul>
+  <div id="grad_top"></div>
+  <div id="grad_bottom"></div>
+  <a href="#" id="next"><i class="icon-chevron-down"></i></a>
+  <a href="#" id="prev"><i class="icon-chevron-up"></i></a>
+</div>
+
 <% month = nil unless month %>
 <% day = nil unless day %>
 <% time_label = calendar_by_type page_type, year, month, day %>
-
 <% content_for :title, "#{time_label}的博客" %>
-
-<h1><%= time_label %>撰写的博客</h1>
-
-<% if paginate %>
-  <p>Page <%= page_number %> of <%= num_pages %></p>
-
-  <% if prev_page %>
-    <p><%= link_to 'Previous page', prev_page %></p>
-  <% end %>
-<% end %>
-
-<ul>
-  <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %> <span><%= date_display article.date %></span></li>
-  <% end %>
-</ul>
-
-<% if paginate %>
-  <% if next_page %>
-    <p><%= link_to 'Next page', next_page %></p>
-  <% end %>
-<% end %>
