--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -6,6 +6,18 @@
   box-shadow: $shadow;
 }
 
+@mixin gradient-vertical($startColor: #555, $endColor: #333) {
+  background-color: mix($startColor, $endColor, 60%);
+  background-image: -moz-linear-gradient(top, $startColor, $endColor); // FF 3.6+
+  background-image: -ms-linear-gradient(top, $startColor, $endColor); // IE10
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from($startColor), to($endColor)); // Safari 4+, Chrome 2+
+  background-image: -webkit-linear-gradient(top, $startColor, $endColor); // Safari 5.1+, Chrome 10+
+  background-image: -o-linear-gradient(top, $startColor, $endColor); // Opera 11.10
+  background-image: linear-gradient(top, $startColor, $endColor); // The standard
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{ie-hex-str($startColor)}', endColorstr='#{ie-hex-str($endColor)}', GradientType=0); // IE9 and down
+}
+
 @mixin clearfix() {
   *zoom: 1;
   &:before,
@@ -218,5 +230,80 @@ footer {
       color: #0000FF;
     }
 
+  }
+}
+
+#timeline {
+  height: 400px;
+  overflow: hidden;
+  margin: 30px auto;
+  position: relative;
+  background: url("../images/dot.gif") 3px top repeat-y;
+
+  li {
+    list-style: none;
+  }
+
+  #dates {
+    float: left;
+    width: 200px;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+
+    li {
+      width: 200px;
+      height: 100px;
+      line-height: 100px;
+      font-size: 24px;
+      padding-left: 10px;
+      background: url("../images/biggerdot.png") left center no-repeat;
+    }
+
+    .selected {
+      font-size: 34px;
+    }
+  }
+
+  #issues {
+    float: left;
+    width: 600px;
+
+    li {
+      height: 400px;
+      display: table-cell;
+      vertical-align: middle;
+    }
+  }
+
+  #prev, #next {
+    font-size: 50px;
+    line-height: 26px;
+    left: 50%;
+    position: absolute;
+  }
+
+  #prev {
+    top: 0;
+  }
+
+  #next {
+    bottom: 0;
+  }
+
+  #grad_top, #grad_bottom {
+    position: absolute;
+    height: 80px;
+    width: 100%;
+  }
+
+  #grad_top {
+    top: 0;
+    @include gradient-vertical(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+  }
+
+  #grad_bottom {
+    bottom: 0;
+    @include gradient-vertical(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
   }
 }
