--- a/source/layout.erb
+++ b/source/layout.erb
@@ -9,7 +9,7 @@
   <!--[if lt IE 9]>
   <%= stylesheet_link_tag "ie" %>
   <![endif]-->
-  <%= javascript_include_tag "jquery-1.8.3.min", "jquery.timelinr-0.9.5", "html5", "application" %>
+  <%= javascript_include_tag "html5", "application" %>
 </head>
 <body>
 <header>
