change timelinr to horizontal

--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -20,10 +20,10 @@ pageable: false
         </li>
     <% end %>
   </ul>
-  <div id="grad_top"></div>
-  <div id="grad_bottom"></div>
-  <a href="#" id="next"><i class="icon-chevron-down"></i></a>
-  <a href="#" id="prev"><i class="icon-chevron-up"></i></a>
+  <div id="grad_left"></div>
+  <div id="grad_right"></div>
+  <a href="#" id="next"><i class="icon-chevron-right"></i></a>
+  <a href="#" id="prev"><i class="icon-chevron-left"></i></a>
 </div>
 
 <% month = nil unless month %>
