--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,87 +1,41 @@
 @import "font-awesome";
+@import "_mixins";
 
-@mixin box-shadow($shadow) {
-  -webkit-box-shadow: $shadow;
-  -moz-box-shadow: $shadow;
-  box-shadow: $shadow;
-}
 
-// Opacity
-@mixin opacity($opacity: 1) {
-  opacity: $opacity;
-  filter: alpha(opacity=#{$opacity * 100});
-}
-
-@mixin rotate($degrees) {
-  -webkit-transform: rotate($degrees);
-  -moz-transform: rotate($degrees);
-  -ms-transform: rotate($degrees);
-  -o-transform: rotate($degrees);
-  transform: rotate($degrees);
-}
-
-@mixin gradient-horizontal($startColor: #555, $endColor: #333) {
-  background-image: -moz-linear-gradient(left, $startColor, $endColor); // FF 3.6+
-  background-image: -ms-linear-gradient(left, $startColor, $endColor); // IE10
-  background-image: -webkit-gradient(linear, 0 0, 100% 0, from($startColor), to($endColor)); // Safari 4+, Chrome 2+
-  background-image: -webkit-linear-gradient(left, $startColor, $endColor); // Safari 5.1+, Chrome 10+
-  background-image: -o-linear-gradient(left, $startColor, $endColor); // Opera 11.10
-  background-image: linear-gradient(left, $startColor, $endColor); // Le standard
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{ie-hex-str($startColor)}', endColorstr='#{ie-hex-str($endColor)}', GradientType=1); // IE9 and down
-}
-
-@mixin gradient-vertical($startColor: #555, $endColor: #333) {
-  background-image: -moz-linear-gradient(top, $startColor, $endColor); // FF 3.6+
-  background-image: -ms-linear-gradient(top, $startColor, $endColor); // IE10
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from($startColor), to($endColor)); // Safari 4+, Chrome 2+
-  background-image: -webkit-linear-gradient(top, $startColor, $endColor); // Safari 5.1+, Chrome 10+
-  background-image: -o-linear-gradient(top, $startColor, $endColor); // Opera 11.10
-  background-image: linear-gradient(top, $startColor, $endColor); // The standard
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{ie-hex-str($startColor)}', endColorstr='#{ie-hex-str($endColor)}', GradientType=0); // IE9 and down
-}
-
-@mixin clearfix() {
-  *zoom: 1;
-  &:before,
-  &:after {
-    display: table;
-    content: "";
-  }
-  &:after {
-    clear: both;
-  }
-}
-.clearfix { @include clearfix(); }
-
-$mainColor: #52ABFD;
+$mainColor: #ea4c88;
 
 body {
   margin: 0;
   font-family: "Hiragino Sans GB W3" arial;
   color: #333;
+}
 
-  a {
-    text-decoration: none;
+a {
+  text-decoration: none;
+  color: lighten($mainColor, 10%);
+  &:hover {
     color: $mainColor;
   }
 }
 
 header {
-  background-color: $mainColor;
+  @include gradient-striped($mainColor);
   a {
-    color: white;
+    color: lighten($mainColor, 30%);
     text-decoration: none;
+    &:hover {
+      color: lighten($mainColor, 30%);
+    }
   }
   h1 {
     margin: 0 auto;
     padding: 30px;
-    text-shadow: 0 0 15px #333;
+    text-shadow: 1px 1px 8px #333;
     display: block;
     width: 960px;
+    font-size: 3em;
+    font-family: "Comic Sans MS", cursive, sans-serif;
   }
-
 }
 
 .timestamp {
@@ -148,13 +102,11 @@ aside {
 
   h3 {
     margin: 0;
-    color: #666;
+    color: $mainColor;
+    border-bottom: 1px dotted $mainColor;
+    line-height: 150%;
   }
 
-  ul {
-    list-style: none;
-    padding-left: 20px;
-  }
 }
 
 footer {
@@ -165,11 +117,11 @@ footer {
 .tags {
   padding: 0;
   font-size: 14px;
+  list-style: none;
 
   li {
     display: inline-block;
-    //@include box-shadow(0 0 4px #999);
-    border: 1px solid #DDD;
+    border: 1px solid lighten($mainColor, 25%);
     margin-right: 5px;
     margin-bottom: 8px;
     &:hover {
