--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -2,27 +2,31 @@
 pageable: false
 ---
 
-<div id="timeline" class="clearfix">
-  <ul id="dates">
-    <% available_months(year).each do |month| %>
-    <li><a href="#month_<%= month %>"><%= calendar_by_type 'month', year, month %></a></li>
-    <% end %>
-  </ul>
-  <ul id="issues">
-    <% available_months(year).each do |month| %>
-        <li id="month_<%= month %>">
-          <div class="article-list">
-            <% page_articles.select{|article| article.date.month == month}.each do |article| %>
-                <p><%= link_to article.title, article %></p>
-            <% end %>
-          </div>
-        </li>
-    <% end %>
-  </ul>
-  <div id="grad_left"></div>
-  <div id="grad_right"></div>
-  <a href="#" id="next"><i class="icon-chevron-right"></i></a>
-  <a href="#" id="prev"><i class="icon-chevron-left"></i></a>
+<div class="row">
+  <div class="span12">
+    <div id="timeline" class="clearfix">
+      <ul id="dates">
+        <% available_months(year).each do |month| %>
+            <li><a href="#month_<%= month %>"><%= calendar_by_type 'month', year, month %></a></li>
+        <% end %>
+      </ul>
+      <ul id="issues">
+        <% available_months(year).each do |month| %>
+            <li id="month_<%= month %>">
+              <div class="article-list">
+                <% page_articles.select { |article| article.date.month == month }.each do |article| %>
+                    <p><%= link_to article.title, article %></p>
+                <% end %>
+              </div>
+            </li>
+        <% end %>
+      </ul>
+      <div id="grad_left"></div>
+      <div id="grad_right"></div>
+      <a href="#" id="next"><i class="icon-chevron-right"></i></a>
+      <a href="#" id="prev"><i class="icon-chevron-left"></i></a>
+    </div>
+  </div>
 </div>
 
 <% month = nil unless month %>
