--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,32 +4,32 @@ per_page: 10
 ---
 
 <% content_for :title, "Welcome" %>
-<div id="main" role="main">
-  <% if paginate %>
-      <p>Page <%= page_number %> of <%= num_pages %></p>
+<div class="row">
+  <div class="span8">
+    <% if paginate %>
+        <p>Page <%= page_number %> of <%= num_pages %></p>
 
-      <% if prev_page %>
-          <p><%= link_to 'Previous page', prev_page %></p>
-      <% end %>
-  <% end %>
+        <% if prev_page %>
+            <p><%= link_to 'Previous page', prev_page %></p>
+        <% end %>
+    <% end %>
+    <% page_articles.each_with_index do |article, i| %>
+        <article class="clearfix">
+          <h4>
+            <div class="timestamp"><%= date_display article.date %></div>
+            <%= link_to article.title, article %>
+          </h4>
+          <p><%= article.summary %></p>
 
-  <% page_articles.each_with_index do |article, i| %>
-      <article class="clearfix">
-        <h2>
-          <div class="timestamp"><%= date_display article.date %></div>
-          <%= link_to article.title, article %>
-        </h2>
-        <p><%= article.summary %></p>
+          <div class="pull-right"><%= link_to "深入阅读 >>", article %></div>
+        </article>
+    <% end %>
 
-        <div class="readmore"><%= link_to "深入阅读 >>", article %></div>
-      </article>
-  <% end %>
-
-  <% if paginate %>
-      <% if next_page %>
-          <p><%= link_to 'Next page', next_page %></p>
-      <% end %>
-  <% end %>
+    <% if paginate %>
+        <% if next_page %>
+            <p><%= link_to 'Next page', next_page %></p>
+        <% end %>
+    <% end %>
+  </div>
+  <%= partial 'sidebar' %>
 </div>
-
-<%= partial 'sidebar' %>
