--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,9 +1,14 @@
+@import "bootstrap";
 @import "font-awesome";
 @import "_mixins";
 @import "timeline";
 @import "code-highlight";
 
 $mainColor: #ea4c88;
+
+h1, h2, h3, h4, h5 {
+  font-weight: normal;
+}
 
 body {
   margin: 0;
@@ -12,10 +17,10 @@ body {
 }
 
 a {
-  text-decoration: none;
   color: lighten($mainColor, 10%);
   &:hover {
     color: $mainColor;
+    text-decoration: none;
   }
 }
 
@@ -23,20 +28,21 @@ header {
   @include gradient-striped($mainColor);
   a {
     color: lighten($mainColor, 30%);
-    text-decoration: none;
+
     &:hover {
       color: lighten($mainColor, 30%);
     }
   }
   h1 {
     margin: 0 auto;
-    padding: 30px;
+    padding: 30px 0;
     text-shadow: 1px 1px 8px #333;
-    display: block;
-    width: 960px;
-    font-size: 3em;
     font-family: "Comic Sans MS", cursive, sans-serif;
   }
+}
+
+.row {
+  margin-top: 30px;
 }
 
 .timestamp {
@@ -45,42 +51,15 @@ header {
   color: #999;
 }
 
-h2 {
-  font-weight: normal;
-  line-height: 27px;
-  margin-bottom: 30px;
-}
-
-h3 {
-  font-weight: normal;
-}
-
-.container {
-  width: 960px;
-  margin: 0 auto;
-  @include clearfix;
-}
-
-#main {
-  width: 610px;
-  padding-right: 30px;
-  float: left;
-
-  .readmore {
-    float: right;
-  }
-}
-
 article {
   padding: 30px;
-  margin-top: 30px;
+  margin-bottom: 30px;
   @include box-shadow(0 0 15px #DDD);
-  font-size: 14px;
-  line-height: 160%;
 
   img {
     border: 1px solid #DDD;
     padding: 5px;
+    margin-bottom: 10px;
   }
 
   pre {
@@ -92,20 +71,10 @@ article {
   }
 }
 
-li {
-  line-height: 150%;
-}
-
 aside {
-  width: 320px;
-  float: left;
-  margin-top: 30px;
-
-  h3 {
-    margin: 0;
+  h4 {
     color: $mainColor;
     border-bottom: 1px dotted $mainColor;
-    line-height: 150%;
   }
 
 }
@@ -116,8 +85,7 @@ footer {
 }
 
 .tags {
-  padding: 0;
-  font-size: 14px;
+  margin-left: 0;
   list-style: none;
 
   li {
@@ -125,10 +93,6 @@ footer {
     border: 1px solid lighten($mainColor, 25%);
     margin-right: 5px;
     margin-bottom: 8px;
-    &:hover {
-      @include rotate(5deg);
-    }
-
     a {
       display: block;
       height: 100%;
@@ -148,19 +112,13 @@ footer {
           position: absolute;
           left: -3px;
           top: 7px;
-          width: 8px;
-          height: 8px;
-          border-radius: 4px;
+          @include square(8px);
+          @include border-radius(4px);
           background-color: $mainColor;
         }
       }
     }
   }
-}
-
-.pull-right {
-  float: right;
-  text-shadow: none;
 }
 
 #disqus_thread {
