--- a/source/stylesheets/timeline.css.scss
+++ b/source/stylesheets/timeline.css.scss
@@ -19,6 +19,7 @@
       float: left;
       width: 200px;
       height: 50px;
+      line-height: 50px;
       font-size: 20px;
       text-align: center;
       background: url("../images/biggerdot.png") center bottom no-repeat;
@@ -41,6 +42,7 @@
   #issues {
     $height: 350px;
     height: $height;
+    width: 100%;
     overflow: hidden;
 
     li {
