--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -4,24 +4,27 @@ per_page: 12
 ---
 <% content_for :title, "Tagged as #{tagname}" %>
 
-<h1>标签为 <%= tagname %> 的博客</h1>
+<div class="row">
+  <h3>标签为 <%= tagname %> 的博客</h3>
 
-<% if paginate %>
-  <p>Page <%= page_number %> of <%= num_pages %></p>
+  <% if paginate %>
+      <p>Page <%= page_number %> of <%= num_pages %></p>
 
-  <% if prev_page %>
-    <p><%= link_to 'Previous page', prev_page %></p>
+      <% if prev_page %>
+          <p><%= link_to 'Previous page', prev_page %></p>
+      <% end %>
   <% end %>
-<% end %>
 
-<ul>
-  <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %> <span><%= date_display article.date %></span></li>
-  <% end %>
-</ul>
+  <ul>
+    <% page_articles.each_with_index do |article, i| %>
+        <li><%= link_to article.title, article %> <span><%= date_display article.date %></span></li>
+    <% end %>
+  </ul>
 
-<% if paginate %>
-  <% if next_page %>
-    <p><%= link_to 'Next page', next_page %></p>
+  <% if paginate %>
+      <% if next_page %>
+          <p><%= link_to 'Next page', next_page %></p>
+      <% end %>
   <% end %>
-<% end %>
+
+</div>
