--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,10 +1,11 @@
+$mainColor: #ea4c88;
+$bgColor: #FBFAF9;
+
 @import "bootstrap";
 @import "font-awesome";
 @import "_mixins";
 @import "timeline";
 @import "code-highlight";
-
-$mainColor: #ea4c88;
 
 h1, h2, h3, h4, h5 {
   font-weight: normal;
@@ -14,6 +15,7 @@ body {
   margin: 0;
   font-family: "Hiragino Sans GB W3" arial;
   color: #333;
+  background-color: $bgColor;
 }
 
 a {
@@ -22,6 +24,10 @@ a {
     color: $mainColor;
     text-decoration: none;
   }
+}
+
+pre {
+  @include border-radius(0);
 }
 
 header {
@@ -54,7 +60,8 @@ header {
 article {
   padding: 30px;
   margin-bottom: 30px;
-  @include box-shadow(0 0 15px #DDD);
+  @include box-shadow(2px 2px 8px #DDD);
+  background-color: white;
 
   img {
     border: 1px solid #DDD;
