--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -47,6 +47,10 @@
   *zoom: 1;
 }
 
+@mixin inline-block() {
+  display: inline-block;
+  @include ie7-inline-block;
+}
 // IE7 likes to collapse whitespace on either side of the inline-block elements.
 // Ems because we're attempting to match the width of a space character. Left
 // version is for form buttons, which typically come after other elements, and
