--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,18 +3,18 @@ pageable: true
 per_page: 10
 ---
 
-<% content_for :title, "Welcome" %>
+<% content_for :title, "努力奔跑" %>
 <div class="row">
   <div class="span8">
     <% if paginate %>
         <p>Page <%= page_number %> of <%= num_pages %></p>
 
         <% if prev_page %>
-            <p><%= link_to 'Previous page', prev_page %></p>
+            <p><%= link_to '上一页', prev_page %></p>
         <% end %>
     <% end %>
     <% page_articles.each_with_index do |article, i| %>
-        <article class="clearfix">
+        <article class="block clearfix">
           <h4>
             <div class="timestamp"><%= date_display article.date %></div>
             <%= link_to article.title, article %>
@@ -27,7 +27,7 @@ per_page: 10
 
     <% if paginate %>
         <% if next_page %>
-            <p><%= link_to 'Next page', next_page %></p>
+            <p><%= link_to '下一页', next_page %></p>
         <% end %>
     <% end %>
   </div>
