--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,11 +1,11 @@
-$mainColor: #ea4c88;
-$bgColor: #FBFAF9;
+$blockColor: #FCFBF2;
 
 @import "bootstrap";
 @import "font-awesome";
 @import "_mixins";
 @import "timeline";
 @import "code-highlight";
+@import "article";
 
 h1, h2, h3, h4, h5 {
   font-weight: normal;
@@ -15,13 +15,15 @@ body {
   margin: 0;
   font-family: "Hiragino Sans GB W3" arial;
   color: #333;
-  background-color: $bgColor;
+  background: #000000 url(/images/running.jpg) no-repeat center;
+  @include background-size(100%);
+  background-attachment: fixed;
 }
 
 a {
-  color: lighten($mainColor, 10%);
+  color: lighten(#B16D53, 10%);
   &:hover {
-    color: $mainColor;
+    color: #B16D53;
     text-decoration: none;
   }
 }
@@ -31,57 +33,41 @@ pre {
 }
 
 header {
-  @include gradient-striped($mainColor);
   a {
-    color: lighten($mainColor, 30%);
+    color: white;
 
     &:hover {
-      color: lighten($mainColor, 30%);
+      color: white;
     }
   }
   h1 {
-    margin: 0 auto;
+    margin: 0 auto 20px;
     padding: 30px 0;
     text-shadow: 1px 1px 8px #333;
     font-family: "Comic Sans MS", cursive, sans-serif;
-  }
-}
-
-.row {
-  margin-top: 30px;
-}
-
-.timestamp {
-  float: right;
-  font-size: 14px;
-  color: #999;
-}
-
-article {
-  padding: 30px;
-  margin-bottom: 30px;
-  @include box-shadow(2px 2px 8px #DDD);
-  background-color: white;
-
-  img {
-    border: 1px solid #DDD;
-    padding: 5px;
-    margin-bottom: 10px;
+    .first-char {
+      font-size: 400%;
+      vertical-align: top;
+      position: relative;
+      top: 30px;
+      @include inline-block;
+      color: #E2B783;
+    }
   }
 
-  pre {
-    border: 1px solid #DDD;
-    border-left-width: 15px;
-    background-color: #FBFBFB;
-    padding: 5px;
-    overflow: scroll;
+  em {
+    margin-top: 25px;
+    color: #EEE;
+    letter-spacing: 4px;
+    text-shadow: 0 0 4px #F8E3AF;
   }
 }
 
 aside {
   h4 {
-    color: $mainColor;
-    border-bottom: 1px dotted $mainColor;
+    color: white;
+    text-shadow: 0 1px 1px #333;
+    border-bottom: 1px dotted white;
   }
 
 }
@@ -91,13 +77,21 @@ footer {
   margin-bottom: 60px;
 }
 
+.block {
+  @include box-shadow(0 0 1px #666);
+  background-color: $blockColor;
+  padding: 30px;
+}
+
 .tags {
   margin-left: 0;
+  margin-bottom: 40px;
   list-style: none;
 
   li {
-    display: inline-block;
-    border: 1px solid lighten($mainColor, 25%);
+    @include inline-block;
+    border: 1px solid #7B8273;
+    background-color: white;
     margin-right: 5px;
     margin-bottom: 8px;
     a {
@@ -109,9 +103,9 @@ footer {
       }
 
       .number {
-        background-color: $mainColor;
+        background-color: #7B8273;
         color: white;
-        display: inline-block;
+        @include inline-block;
         padding: 0 4px;
         position: relative;
 
@@ -121,17 +115,9 @@ footer {
           top: 7px;
           @include square(8px);
           @include border-radius(4px);
-          background-color: $mainColor;
+          background-color: #7B8273;
         }
       }
     }
   }
-}
-
-#disqus_thread {
-  margin-top: 30px;
-}
-
-.article-nav {
-  margin: 30px 0;
 }
