--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -2,20 +2,20 @@
 pageable: true
 per_page: 12
 ---
-<% content_for :title, "Tagged as #{tagname}" %>
+<% content_for :title, tagname %>
 
-<div class="row">
-  <h3>标签为 <%= tagname %> 的博客</h3>
+<div class="block">
+  <h3><i class="icon-tags"></i> <%= tagname %></h3>
 
   <% if paginate %>
       <p>Page <%= page_number %> of <%= num_pages %></p>
 
       <% if prev_page %>
-          <p><%= link_to 'Previous page', prev_page %></p>
+          <p><%= link_to '上一页', prev_page %></p>
       <% end %>
   <% end %>
 
-  <ul>
+  <ul class="article-list">
     <% page_articles.each_with_index do |article, i| %>
         <li><%= link_to article.title, article %> <span><%= date_display article.date %></span></li>
     <% end %>
@@ -23,7 +23,7 @@ per_page: 12
 
   <% if paginate %>
       <% if next_page %>
-          <p><%= link_to 'Next page', next_page %></p>
+          <p><%= link_to '下一页', next_page %></p>
       <% end %>
   <% end %>
 
