--- a/source/layout.erb
+++ b/source/layout.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1'/>
+  <meta name="keywords" content="<%= yield_content :keywords %>">
   <% title = yield_content :title %>
   <title><%= title.present? ? title : current_page.data.title %> - Sahara</title>
   <%= stylesheet_link_tag "all" %>
