--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,13 +6,6 @@ per_page: 10
 <% content_for :title, "努力奔跑" %>
 <div class="row">
   <div class="span8">
-    <% if paginate %>
-        <p>Page <%= page_number %> of <%= num_pages %></p>
-
-        <% if prev_page %>
-            <p><%= link_to '上一页', prev_page %></p>
-        <% end %>
-    <% end %>
     <% page_articles.each_with_index do |article, i| %>
         <article class="block clearfix">
           <h4>
@@ -25,11 +18,7 @@ per_page: 10
         </article>
     <% end %>
 
-    <% if paginate %>
-        <% if next_page %>
-            <p><%= link_to '下一页', next_page %></p>
-        <% end %>
-    <% end %>
+    <%= partial 'pagination', :locals => {:paginate => paginate, :prev_page => prev_page, :next_page => next_page, :page_number => page_number, :num_pages => num_pages} %>
   </div>
   <%= partial 'sidebar' %>
 </div>
