add about me image

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -155,4 +155,9 @@ footer {
   &.life {
     background-image: url(/images/life.jpg);
   }
+
+  &.about-me {
+    background-image: url(http://ww4.sinaimg.cn/mw690/687c9fd1gw1dxfzvrgsq9j.jpg);
+    background-size: auto 250px;
+  }
 }
