--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,6 +9,6 @@
   </div>
 
   <div class="span3 offset2">
-    <div class="photo-paper"><%= link_to "关于我", "#" %></div>
+    <div class="photo-paper about-me"><%= link_to "关于我", "#" %></div>
   </div>
 </div>
