adjust style, link flickr images

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,10 +5,10 @@
   </div>
 
   <div class="span3 offset1">
-    <div class="photo-paper life"><%= link_to "发现生活", "#" %></div>
+    <div class="photo-paper life"><%= link_to "发现生活", tag_path('life') %></div>
   </div>
 
   <div class="span3 offset2">
-    <div class="photo-paper about-me"><%= link_to "关于我", "#" %></div>
+    <div class="photo-paper about-me"><%= link_to "关于我", "/about-me.html" %></div>
   </div>
 </div>
