--- a/source/_sidebar.html.erb
+++ b/source/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <aside class="span4">
   <h4><i class="icon-tags"></i> 标签</h4>
   <ul class="tags">
-    <% blog.tags.each do |tag, articles| %>
+    <% blog.tags.reject{|tag| tag == tagname }.each do |tag, articles| %>
         <li><%= labeled_link tag, articles.size, tag_path(tag) %></li>
     <% end %>
   </ul>
