--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -20,5 +20,5 @@ per_page: 10
 
     <%= partial 'pagination', :locals => {:paginate => paginate, :prev_page => prev_page, :next_page => next_page, :page_number => page_number, :num_pages => num_pages} %>
   </div>
-  <%= partial 'sidebar' %>
+  <%= partial 'sidebar', :locals => {:tagname => tagname} %>
 </div>
