--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,14 +1,33 @@
 <% content_for :title, "在路上" %>
-<div class="row">
-  <div class="span3">
-    <div class="photo-paper tech"><%= link_to "技术博客", tag_path('tech') %></div>
-  </div>
 
-  <div class="span3 offset1">
-    <div class="photo-paper life"><%= link_to "发现生活", tag_path('life') %></div>
-  </div>
+<ul class="ca-menu">
+  <li>
+    <% link_to tag_path('tech') do %>
+        <span class="ca-icon">T</span>
+        <div class="ca-content">
+          <h2 class="ca-main">Tech on Everything</h2>
+          <h3 class="ca-sub">技术博客</h3>
+        </div>
+    <% end %>
+  </li>
 
-  <div class="span3 offset2">
-    <div class="photo-paper about-me"><%= link_to "关于我", "/about-me.html" %></div>
-  </div>
-</div>
+  <li>
+    <% link_to tag_path('life') do %>
+        <span class="ca-icon">L</span>
+        <div class="ca-content">
+          <h2 class="ca-main">La vie est<br/>Belle</h2>
+          <h3 class="ca-sub">发现生活</h3>
+        </div>
+    <% end %>
+  </li>
+
+  <li>
+    <% link_to "/photos.html" do %>
+        <span class="ca-icon">P</span>
+        <div class="ca-content">
+          <h2 class="ca-main">Record in Photos</h2>
+          <h3 class="ca-sub">照片集</h3>
+        </div>
+    <% end %>
+  </li>
+</ul>
