--- a/source/layout.erb
+++ b/source/layout.erb
@@ -13,25 +13,36 @@
   <%= javascript_include_tag "html5", "application" %>
 </head>
 <body>
-<header>
-  <div class="container">
-    <em class="pull-right">
-      技术宅女的世界, 风那么清, 云那么淡<br/>
-      通向远方的路<br/>
-      那是归宿吗
-    </em>
-
-    <h1>
-      <% link_to "/" do %>
-          <span class="first-char">J</span>e m'appelle Sahara
-      <% end %>
-    </h1>
-  </div>
-</header>
 <div class="container">
+  <header>
+    <div class="clearfix">
+      <div class="cs-text pull-left">
+        <% link_to '/' do %>
+            <span>s</span>
+            <span>a</span>
+            <span>h</span>
+            <span>a</span>
+            <span>r</span>
+            <span>a</span>
+        <% end %>
+      </div>
+      <% unless current_page.path == 'contact.html' %>
+      <ul class="ca-menu small pull-right">
+        <li>
+          <% link_to '/contact.html' do %>
+              <span class="ca-icon">C</span>
+              <div class="ca-content">
+                <h2 class="ca-main">Contact</h2>
+                <h3 class="ca-sub">联系我</h3>
+              </div>
+          <% end %>
+        </li>
+      </ul>
+      <% end %>
+    </div>
+  </header>
   <%= yield %>
 </div>
-<footer></footer>
 <%= yield_content :scripts %>
 <%= partial "ga" %>
 </body>
