--- a/source/stylesheets/photos.css.scss
+++ b/source/stylesheets/photos.css.scss
@@ -3,14 +3,14 @@
   list-style-type: none;
   margin: 0;
 
-  $padding: 5px;
+  $padding: 6px;
 
   li {
     width: 220px;
     display: none;
     text-align: center;
     padding: $padding $padding 30px;
-    background-color: $blockColor;
+    background-color: rgba(255, 255, 255, 0.4);
     @include border-radius(2px);
 
     img {
@@ -24,7 +24,19 @@
       width: 220px;
       text-align: left;
       padding: 5px 0;
+      color: white;
+      text-shadow: 1px 1px 2px rgba(71,80,23,0.3);
     }
 
+    &:hover {
+      @include scale(1.2);
+      @include transition(all 0.4s ease-in-out);
+      background-color: #f6f6f6;
+      z-index: 100;
+      span {
+        text-shadow: 1px 1px 10px rgba(225, 160, 154, 0.60);
+        color: #e1a09a;
+      }
+    }
   }
 }
